@@ -946,14 +946,14 @@ void FCEU_DrawMovies(uint8 *XBuf)
 				sprintf(counterbuf,"%d",currMovieData.records.size());
 			
 			if(counterbuf[0])
-				DrawTextTrans(XBuf+FCEU_TextScanlineOffsetFromBottom(24), 256, (uint8*)counterbuf, 0x20+0x80);
+				DrawTextTrans(ClipSidesOffset+XBuf+FCEU_TextScanlineOffsetFromBottom(24), 256, (uint8*)counterbuf, 0x20+0x80);
 		}
 		else
 		{
 			char counterbuf[32] = {0};
 			sprintf(counterbuf,"%d (no movie)",currFrameCounter);
 			if(counterbuf[0])
-				DrawTextTrans(XBuf+FCEU_TextScanlineOffsetFromBottom(24), 256, (uint8*)counterbuf, 0x20+0x80);
+				DrawTextTrans(ClipSidesOffset+XBuf+FCEU_TextScanlineOffsetFromBottom(24), 256, (uint8*)counterbuf, 0x20+0x80);
 		}
 	}
 }
@@ -971,7 +971,7 @@ void FCEU_DrawLagCounter(uint8 *XBuf)
 		sprintf(counterbuf,"%d",lagCounter);
 		
 		if(counterbuf[0])
-			DrawTextTrans(XBuf+FCEU_TextScanlineOffsetFromBottom(32), 256, (uint8*)counterbuf, color); //0x20+0x80
+			DrawTextTrans(ClipSidesOffset+XBuf+FCEU_TextScanlineOffsetFromBottom(32), 256, (uint8*)counterbuf, color); //0x20+0x80
 	}
 }
 
