@@ -3,7 +3,7 @@ void FCEU_KillVirtualVideo(void);
 int SaveSnapshot(void);
 extern uint8 *XBuf;
 extern uint8 *XBackBuf;
-
+extern int ClipSidesOffset;
 extern struct GUIMESSAGE
 {
 	//countdown for gui messages
